# cic-fixed

./: .gitignore  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: ci.yml
benches/: cic_bench.rs
src/: decimator.rs  differentiator.rs  integrator.rs  lib.rs
