[package]
name = "cic-fixed"
version = "0.3.0"
edition = "2021"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
description = "CIC filter"
categories = ["no-std", "embedded"]
keywords = ["cic", "filter", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AkiyukiOkayasu/cic-fixed"
readme = "README.md"
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


