[package]
name = "cic-fixed"
version = "0.4.1"
edition = "2021"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
description = "CIC filter implementation for fixed point numbers"
categories = ["no-std", "embedded"]
keywords = ["cic", "filter", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AkiyukiOkayasu/cic-fixed"
readme = "README.md"
rust-version = "1.68.2"

[dependencies]


[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}  

[[bench]]
name = "cic_bench"
harness = false